--- a/utils/accesspoint.html
+++ b/utils/accesspoint.html
@@ -3,7 +3,6 @@
 
 <head>
 	<title>ESP32 connect to Wifi</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css">
 </head>
 
 <body>
@@ -12,13 +11,13 @@
 	<form action="/C" method="GET">
 		<fieldset>
 			<legend>Connect to wifi</legend>
-			<div class="col-sm-12 col-md-6">
+			<div>
 				<select name="ssid">
 					%SSIDLIST%
 				</select>
 			</div>
-			<div class="row">
-				<div class="col-sm-8 col-md-8">
+			<div>
+				<div>
 					<label for="password">Password</label>
 					<input name="p" type="password" id="password" placeholder="Password" />
 				</div>
