--- a/utils/main.html
+++ b/utils/main.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<title>ESP32</title>
+		<title>ESP Platform</title>
 		<style>.button.large {text-align:center;padding:2em ; margin: 1em;font-size:2em;color:black}</style>
 </head>
 <body>
-		<h1 align="center">ESP32 action</h1>
+		<h1 align="center">ESP action</h1>
 		<br/><br/>
 		<div class="row cols-sm-10">
-				<a class="button large" onClick='run("A")' href="#">Blink LED</a>
-				<a class="button large" onClick='run("B")' href="#">Do another thing</a>
+				<a class="button large" onClick='run("A")' href="#">Send an A</a>
 		</div>
 		<div><small>Connected to WiFi: %WIFI%</small></div>
 		<script>
